<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/EZGuardOrange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Tag"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/paytone_one"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:id="@+id/tag_dialog_edit_text"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Cancel"
            android:textSize="18sp"
            android:id="@+id/tag_dialog_cancel_button"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:textSize="18sp"
            android:id="@+id/tag_dialog_add_button"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>