<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/tagsFragment"
        android:title="Tags"
        android:icon="@drawable/icon_tag"/>
    <item
        android:id="@+id/itemsFragment"
        android:title="Items"
        android:icon="@drawable/icon_inventory"/>
</menu>