...
                android:layout_marginEnd="14dp"
                app:cursorColor="@color/EZGuardOrange"
                app:hintTextColor="@color/EZGuardOrange"
                app:boxStrokeColor="@color/EZGuardOrange"
                android:hint="Count">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_details_count"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/paytone_one"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/paytone_one"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_details_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="#BCD7F8"
...
